# queue_stack

./: CMakeLists.txt
gtest/: CMakeLists.txt
includes/: CMakeLists.txt  TMultiStack.h  TQueue.h  TStack.h
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  queue_test.cpp  stack_test.cpp  test_main.cpp
